# rust-mesh

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: from_image.rs  from_image.tex
mesh2d/: Cargo.toml  Makefile
mesh2d/examples/: from_image.rs  from_image.tex
mesh2d/src/: density_mesh.rs  lib.rs
src/: density_mesh.rs  lib.rs
triangle/: Cargo.toml
triangle-sys/: Cargo.toml  Makefile  build.rs
triangle-sys/Triangle/: triangle.c  triangle.h
triangle-sys/src/: lib.rs
triangle/src/: lib.rs
