[package]
name = "mesh2d"
version = "0.1.0"
edition = "2021"
authors = ["Christophe Troestler <christophe.troestler@umons.ac.be>"]
description = "Two dimensional triangular mesh generation and manipulation"
homepage = "https://github.com/Chris00/rust-mesh"
repository = "https://github.com/Chris00/rust-mesh"
documentation = "https://docs.rs/mesh2d"
license = "GPL-2.1-or-later"
keywords = ["math", "mesh", "triangulation", "PDE", "science"]
categories = ["mathematics", "science"]
readme = "README.md"

[dependencies]
rgb = "0.8"
ndarray = { version = "0.15.4", optional = true }
density-mesh-core = { version = "1.5.0", optional = true }

[dev-dependencies]
image = "*"
density-mesh-core = "1.5.0"
density-mesh-image = "1.5.0"

[[example]]
name = "from_image"
required-features = ["density-mesh-core"]
