[package]
name = "mesh2d-triangle"
version = "0.1.0"
edition = "2021"
authors = ["Christophe Troestler <christophe.troestler@umons.ac.be>"]
description = "Binding to the triangle mesh generator"
homepage = "https://github.com/Chris00/rust-mesh"
repository = "https://github.com/Chris00/rust-mesh"
documentation = "https://docs.rs/mesh2d-triangle"
license = "GPL-2.1-or-later"
keywords = ["math", "mesh", "triangulation", "PDE", "science"]
categories = ["mathematics", "science", "api-bindings"]
readme = "../README.md"

[dependencies]
mesh2d = { path = "../mesh2d", version = "*" }
triangle-sys = { path = "../triangle-sys", version = "*" }
